[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-wallet-tool"
version = "2.0.0"
description = "Autonomous agent SDK for detecting and claiming USDG rewards on Solana"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "solana>=0.34.0",
    "solders>=0.21.0",
    "spl-token>=0.1.0",
]

[project.urls]
Repository = "https://github.com/being00001/agent_wallet_tool"

[tool.setuptools.packages.find]
include = ["agent_wallet_tool*"]
