[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-wallet-tool"
version = "2.1.0"
description = "Autonomous agent SDK for Solana wallet ops, DAO integration, and USDG reward sweeping"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "solana>=0.34.0",
    "solders>=0.21.0",
    "spl-token>=0.1.0",
]

[project.urls]
Repository = "https://github.com/being00001/agent-wallet-tool"

[tool.setuptools]
py-modules = ["agent_wallet", "dao_integration", "usdg_auto_claim"]
